# piper_dev

./: .gitignore  pyproject.toml
scripts/: orbbec_permissions.sh  teleoperation.py  trans_data_to_rlds.py
scripts/datasets/: hi.pkl  s.pkl
src/piper_dev/: __init__.py  utils.py
src/piper_dev/data_collection/: README.MD  config.py  read_demo.py  teleoperation.py
src/piper_dev/data_trans/: README.MD
src/piper_dev/data_trans/my_dataset/: my_dataset_dataset_builder.py
tests/: check.py  rlds_view.py  test_camera.py  test_teleoperation.py
